--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ h1 {
 .main {
     color: #fff;
     padding-top: 18.6rem;
+    padding-bottom: 10.4rem;
     background-image: url('../img/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -138,6 +139,67 @@ h1 {
     border-radius: .8rem;
     padding: 2.2rem 7.2rem;
     margin-bottom: 8.8rem;
+}
+
+.main-slider__wrap {
+    max-width: 41.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.swiper__slide-slide {
+    position: relative;
+    width: 16.4rem;
+    height: 10.5rem;
+    border-radius: .8rem;
+    overflow: hidden;
+}
+.main__description-wrap {
+    display: flex;
+    align-items: center;
+}
+.main__button-play {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width : 13.2rem;
+    height: 13.2rem;
+    border-radius: 50%;
+    background-color: #391917;
+    margin-left: 33.1rem;
+}
+
+.main__button-dark  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width : 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    background-color: #151515;
+}
+
+.main-slider__arrow {
+    width: 3.2rem;
+    height: 2.2rem;
+    flex-shrink: 0;
+    margin-left: 2.8rem;
+    cursor: pointer;
+}
+.swiper__slide-slide span {
+    position: absolute;
+    left: 1.2rem;
+    bottom: .6rem;
+    transform: translate(0, 0);
+    font-size: 1rem;
+    line-height: 120%;
+}
+
+.swiper__slide-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .footer {
